chore: flatten SR collection
chore: remove unused repositories

chore: changed lookup db to solutions db